--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,32 @@
-umap
 atomicwrites==1.3.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.4
-certifi==2019.11.28
+certifi==2020.4.5.1
 colorama==0.4.3
+cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
 importlib-metadata==1.5.0
-ipykernel==5.1.4
-ipython==7.13.0
+ipykernel==5.2.1
+ipython==7.14.0
 ipython-genutils==0.2.0
+ipywidgets==7.5.1
 jedi==0.16.0
 Jinja2==2.11.1
 joblib==0.14.1
 json5==0.9.2
 jsonschema==3.2.0
-jupyter-client==6.0.0
+jupyter==1.0.0
+jupyter-client==6.1.3
+jupyter-console==6.1.0
 jupyter-core==4.6.3
-jupyterlab==2.0.1
-jupyterlab-server==1.0.7
+kiwisolver==1.2.0
+lab==6.0
 llvmlite==0.31.0
 MarkupSafe==1.1.1
+matplotlib==3.2.1
 mistune==0.8.4
 mkl-fft==1.0.15
 mkl-random==1.1.0
@@ -38,10 +42,10 @@ pandas==1.0.1
 pandocfilters==1.4.2
 parso==0.6.2
 pickleshare==0.7.5
-plotly==4.5.3
+plotly==4.7.1
 pluggy==0.13.1
 prometheus-client==0.7.1
-prompt-toolkit==3.0.4
+prompt-toolkit==3.0.5
 py==1.8.1
 Pygments==2.6.1
 pyparsing==2.4.6
@@ -51,19 +55,24 @@ python-dateutil==2.8.1
 pytz==2019.3
 pywin32==227
 pywinpty==0.5.7
-pyzmq==19.0.0
+pyzmq==19.0.1
+qtconsole==4.7.3
+QtPy==1.9.0
 retrying==1.3.3
 scikit-learn==0.22.1
 scipy==1.4.1
 Send2Trash==1.5.0
+simplejson==3.17.0
 six==1.14.0
-sklearn==0.0
+tbb==2019.0
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
 traitlets==4.3.3
-umap-learn==0.3.10
+txt2tags==3.7
+umap-learn==0.4.2
 wcwidth==0.1.8
 webencodings==0.5.1
+widgetsnbextension==3.5.1
 wincertstore==0.2
-zipp==3.1.0
+zipp==2.2.0
